[package]
name = "rouille-maint-in"
version = "3.0.1"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/inejge/rouille-maint-in"
documentation = "http://docs.rs/rouille-maint-in"
description = "High-level idiomatic web framework."
readme = "README.md"
keywords = ["web", "framework", "http", "rest"]
categories = ["web-programming::http-server", "web-programming::websocket"]
edition = "2018"

[features]
default = ["gzip", "brotli"]
brotli = ["brotli2"]
gzip = ["deflate"]
ssl = ["tiny_http/ssl"]

[dependencies]
base64 = "0.13.0"
brotli2 = { version = "0.3.2", optional = true }
chrono = "0.4.19"
filetime = "0.2.14"
deflate = { version = "0.8", optional = true, features = ["gzip"] }
multipart = { version = "0.17.1", default-features = false, features = ["server"] }
percent-encoding = "2.1.0"
rand = "0.7"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
sha1 = "0.6.0"
term = "0.7.0"
time = "0.1.44"
tiny_http = "0.8.0"
url = "2.2.1"
threadpool = "1.8.1"
num_cpus = "1.13.0"

[dev-dependencies]
postgres = { version = "0.19.0", default-features = false }
log = "0.4.14"
